# ecommerce

./: .env_example  .flake8  app.py  main.py  pyproject.toml
auth/: auth_handler.py
controllers/: product_controller.py  shop_controller.py
core/: error_response.py  success_response.py
dbs/: database.py  mongodb.py  mongodb_init.py
exceptions/: custom.py  db_exception.py  error_message.py  exception.py  message.py  misc.py
exceptions/api_keys/: exception.py
exceptions/key_tokens/: exception.py
exceptions/products/: exception.py
exceptions/shops/: exception.py
helpers/: field_validator.py  hashing.py  key_generator.py  model_field_handler.py  response_data_handler.py  response_handler.py  singleton.py
models/: api_key.py  api_key_model.py  datetime_base.py  key_token_model.py  product_model.py  py_object_id.py  shop_model.py
routers/: router.py
routers/products/: product.py
routers/shops/: shop.py
services/: api_key_service.py  key_token_service.py  product_service.py  shop_service.py
tests/: test_setup.py
tests/test_products/: test_product.py
tests/test_services/: test_shop.py
utilities/: env_configuration.py
utils/: env_configuration.py  setting.py
