[tool.poetry]
name = "ecommerce"
version = "0.1.0"
description = ""
authors = ["nttnhannho <makelifeperfect@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.4"
uvicorn = "^0.32.0"
pymongo = "^4.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
