[tool.poetry]
name = "ecommerce"
version = "0.1.0"
description = ""
authors = ["nttnhannho <makelifeperfect@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.4"
uvicorn = "^0.32.0"
pymongo = "^4.10.1"
python-dotenv = "^1.0.1"
pydantic = {extras = ["email"], version = "^2.9.2"}
bcrypt = "^4.2.0"
requests = "^2.32.3"
pytest = "^8.3.3"
httpx = "^0.27.2"
cryptography = "^43.0.3"
jwt = "^1.3.1"
pyjwt = "^2.9.0"
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
